================================================================================
Changes since v11.10
================================================================================

--------------------------------------------------------------------------------
basic

   NavDR class
      1) removed function getRpyVector()
      2) deadReckoning() function is now using  Basic::Nav::computeEulerAngles()
         instead of getRpyVector()


--------------------------------------------------------------------------------
basicGL

   MapPage class
      1) (bug fix) Fixed getCurrentRadius() to return the correct centered or
         decentered radius value

   Readout class
      1) Added makeText method to lat/lon readouts to change "@" to degree symbol


--------------------------------------------------------------------------------
simulation

   Autopilot class
      1) Update to loiter pattern calculation

   Nib class
      1) removed function drComputeEulerAngles()
      2) mainDeadReckoning() function is now using Basic::Nav::computeEulerAngles()
         instead of drComputeEulerAngles()



